force-app/main/default/objects/Visit__c/fields/Products_Covered__c.field-meta.xml
<CustomField>
    <fullName>Products_Covered__c</fullName>
    <label>Products Covered</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Air classifiers</fullName>
            </value>
            <value>
                <fullName>Centrifuges</fullName>
            </value>
            <value>
                <fullName>Conveyors</fullName>
            </value>
            <value>
                <fullName>Crushers</fullName>
            </value>
            <value>
                <fullName>Cyclones</fullName>
            </value>
            <value>
                <fullName>Elastomers</fullName>
            </value>
            <value>
                <fullName>Hoses</fullName>
            </value>
            <value>
                <fullName>HPGR</fullName>
            </value>
            <value>
                <fullName>Integrated solutions</fullName>
            </value>
            <value>
                <fullName>Magnets</fullName>
            </value>
            <value>
                <fullName>Mechanical seals</fullName>
            </value>
            <value>
                <fullName>Mill liners</fullName>
            </value>
            <value>
                <fullName>Mine water</fullName>
            </value>
            <value>
                <fullName>Screens &amp; feeders</fullName>
            </value>
            <value>
                <fullName>Slurry pumps</fullName>
            </value>
            <value>
                <fullName>Speciality pumps</fullName>
            </value>
            <value>
                <fullName>Valves</fullName>
            </value>
            <value>
                <fullName>Washers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>