force-app/main/default/objects/Visit__c/fields/Products_Covered_Count__c.field-meta.xml
<CustomField>
    <fullName>Products_Covered_Count__c</fullName>
    <label>Products Covered Count</label>
    <summaryForeignKey>Product_Discussed1__c.Visit__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>