force-app/main/default/objects/Visit__c/fields/Reason_Visited__c.field-meta.xml
<CustomField>
    <fullName>Reason_Visited__c</fullName>
    <label>Reason Visited</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Admin Query</fullName>
            </value>
            <value>
                <fullName>Business Development Call</fullName>
            </value>
            <value>
                <fullName>Cold Call</fullName>
            </value>
            <value>
                <fullName>Continued Negotiations</fullName>
            </value>
            <value>
                <fullName>Customer Cancelled</fullName>
            </value>
            <value>
                <fullName>Customer Complaint</fullName>
            </value>
            <value>
                <fullName>Future Order Potential</fullName>
            </value>
            <value>
                <fullName>Joint Visit</fullName>
            </value>
            <value>
                <fullName>Maintaining Presence</fullName>
            </value>
            <value>
                <fullName>Project Update</fullName>
            </value>
            <value>
                <fullName>Quality Issue</fullName>
            </value>
            <value>
                <fullName>Quote Follow Up</fullName>
            </value>
            <value>
                <fullName>Request from Customer</fullName>
            </value>
            <value>
                <fullName>Sales Lead</fullName>
            </value>
            <value>
                <fullName>Service Visit</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>