force-app/main/default/objects/Visit__c/fields/SharePoint_Link__c.field-meta.xml
<CustomField>
    <fullName>SharePoint_Link__c</fullName>
    <label>SharePoint Link</label>
    <type>Url</type>
</CustomField>