force-app/main/default/objects/Visit__c/fields/Visit_Report__c.field-meta.xml
<CustomField>
    <fullName>Visit_Report__c</fullName>
    <label>Visit Report</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>