force-app/main/default/objects/Visit__c/fields/What_Happened__c.field-meta.xml
<CustomField>
    <fullName>What_Happened__c</fullName>
    <label>Visit Results</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>